fixed icon problem on mobile devices

--- a/geo365/Content/grid.css
+++ b/geo365/Content/grid.css
@@ -64,8 +64,9 @@
     }
 
     .smallLogo {
-        max-width: 30%;
+        height: 42px;
         padding: 4px;
+        padding-left: 8px;
     }
 
     #burger {
